; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machpc.c_InitializeSerialPort.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_machpc.c_InitializeSerialPort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @InitializeSerialPort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InitializeSerialPort(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = add nsw i64 %6, 3
  %8 = call i32 @WRITE_PORT_UCHAR(i64 %7, i32 128)
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @WRITE_PORT_UCHAR(i64 %9, i32 96)
  %11 = load i64, i64* %4, align 8
  %12 = add nsw i64 %11, 1
  %13 = call i32 @WRITE_PORT_UCHAR(i64 %12, i32 0)
  %14 = load i64, i64* %4, align 8
  %15 = add nsw i64 %14, 3
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @WRITE_PORT_UCHAR(i64 %15, i32 %16)
  %18 = load i64, i64* %4, align 8
  %19 = add nsw i64 %18, 1
  %20 = call i32 @WRITE_PORT_UCHAR(i64 %19, i32 0)
  %21 = load i64, i64* %4, align 8
  %22 = add nsw i64 %21, 4
  %23 = call i32 @WRITE_PORT_UCHAR(i64 %22, i32 9)
  %24 = load i64, i64* %4, align 8
  %25 = add nsw i64 %24, 5
  %26 = call i32 @READ_PORT_UCHAR(i64 %25)
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @WRITE_PORT_UCHAR(i64, i32) #1

declare dso_local i32 @READ_PORT_UCHAR(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
